--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   profiles:
-    active: local
+    active: test      # Change the active profile to test
   datasource:
     url: jdbc:h2:tcp://localhost/~/querydsl
     username: sa
